--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
 
 <body>
 
-    <div class="container">
-        <h1 class="display-4 d-none d-md-block text-white mt-3 mb-0 text-center">Acropolis Gym</h1>
-        <div class="row justify-content-center p-5">
+    <div class="container-fluid py-5">
 
-            <form class="border border-success p-5">
-                <div class="text-center">
-                    <i class="far fa-user mb-3 display-4 text-white"></i>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1" class="text-white">Usuario</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="admi">
-                    
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1" class="text-white">Contraseña</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
-                </div>
-                <button type="submit" class="btn btn-block btn-success">Ingresar</button>
-            </form>
+        <div class="text-center">
+            <i class="far fa-user mb-0 mt-3 display-4 text-white"></i>
+        </div>
+        <h1 class="display-4 d-none d-md-block text-white mt-0 mb-0 text-center">Acropolis Gym</h1>
+
+        <div class="row mt-4 justify-content-center align-items-center">
+            <div class="col-sm-12 col-md-5 col-lg-3 col-ipad-pro">
+                <form class="p-lg-5">
+                    <h4 class="font-weight-light text-white">Inicia sesion</h4>
+                    <div class="form-group mb-1">
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="admi">
+
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+                    </div>
+                    <button type="submit" class="btn btn-block btn-success">Ingresar</button>
+                </form>
+            </div>
         </div>
     </div>
     <!-- Optional JavaScript -->
