--- a/html/clientes.html
+++ b/html/clientes.html
@@ -1,71 +1,72 @@
 <div class="container bg-dark">
-    <div>
-        <h4 class="text-right font-italic text-white">
-            <div style="float:right;">
-              <script type="text/javascript">
-              //<![CDATA[
-              var  today = new Date();
-              var m = today.getMonth() + 1;
-              var mes = (m < 10) ? '0' + m : m;
-              document.write(today.getDate(),'/' +mes,'/'+today.getYear());
+  <div>
+    <h4 class="text-right font-italic text-white">
+      <div style="float:right;">
+        <script type="text/javascript">
+          //<![CDATA[
+          var today = new Date();
+          var m = today.getMonth() + 1;
+          var mes = (m < 10) ? '0' + m : m;
+          document.write(today.getDate(), '/' + mes, '/' + today.getYear());
               //]]> 
-              </script>
-            </div>
-          </h4>
-      <h1 class="text-white">Clientes</h1>
-    </div>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#"><i class="far fa-edit h1 text-white"></i></a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-    
-      <table class="table table-hover table-dark mt-3">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td colspan="2">Larry the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
+        </script>
+      </div>
+    </h4>
+    <h1 class="text-white">Clientes</h1>
   </div>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="#"><i class="far fa-edit h1 text-white"></i></a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+  <table class="table table-hover table-dark mt-3">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
