--- a/html/clientes.html
+++ b/html/clientes.html
@@ -1,5 +1,5 @@
 <div class="container bg-dark">
-  <div>
+  <!-- <div>
     <h4 class="text-right font-italic text-white">
       <div style="float:right;">
         <script type="text/javascript">
@@ -13,9 +13,9 @@
       </div>
     </h4>
     <h1 class="text-white">Clientes</h1>
-  </div>
+  </div> -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,8 +23,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
+        <li class="nav-item px-0">
+          <a class="nav-link pl-0" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
@@ -35,7 +35,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+        <!-- <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button> -->
       </form>
     </div>
   </nav>
