--- a/html/membresias.html
+++ b/html/membresias.html
@@ -1,21 +1,6 @@
 <div class="container bg-dark">
-    <div>
-        <h4 class="text-right font-italic text-white">
-            <div style="float:right;">
-              <script type="text/javascript">
-              //<![CDATA[
-              var  today = new Date();
-              var m = today.getMonth() + 1;
-              var mes = (m < 10) ? '0' + m : m;
-              document.write(today.getDate(),'/' +mes,'/'+today.getYear());
-              //]]> 
-              </script>
-            </div>
-          </h4>
-      <h1 class="text-white">Membresias</h1>
-    </div>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
+              <a class="nav-link pl-0" href="#"><i class="far fa-plus-square text-white h1"></i> <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
@@ -33,8 +18,7 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
           </form>
         </div>
       </nav>
@@ -42,10 +26,10 @@
       <table class="table table-hover table-dark mt-3">
           <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+              <th scope="col">#Id</th>
+              <th scope="col">NIP Cliente</th>
+              <th scope="col">Fecha Inicio</th>
+              <th scope="col">Fecha Termino</th>
             </tr>
           </thead>
           <tbody>
