Cambios a side bar, clientes y membresias solo tabla responsive

--- a/html/membresias.html
+++ b/html/membresias.html
@@ -1,56 +1,44 @@
 <div class="container bg-dark">
-   
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link pl-0" href="#"><i class="far fa-plus-square text-white h1"></i> <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#"><i class="far fa-edit h1 text-white"></i></a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-          </form>
-        </div>
-      </nav>
-    
-      <table class="table table-hover table-dark mt-3">
-          <thead>
-            <tr>
-              <th scope="col">#Id</th>
-              <th scope="col">NIP Cliente</th>
-              <th scope="col">Fecha Inicio</th>
-              <th scope="col">Fecha Termino</th>
-            </tr>
-          </thead>
-          <tbody>
-              <!-- contenido tabla -->
-            <!-- <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td colspan="2">Larry the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody> -->
-        </table>
+
+  <nav class="navbar navbar-expand navbar-dark bg-dark px-0 sticky-top">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link pl-0" href="#" data-toggle="modal" data-target="#agregarcliente"><i class="far fa-plus-square text-white h1"></i>
+            <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="#"><i class="far fa-edit h1 text-white"></i></a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+      </form>
+    </div>
+  </nav>
+  <!-- modal -->
+  <!-- modal -->
+  <div class="table-responsive">
+    <table class="table table-hover table-dark mt-3">
+      <thead class="sticky-top">
+        <tr class="sticky-top">
+          <th scope="col">#Id</th>
+          <th scope="col">NIP Cliente</th>
+          <th scope="col">Fecha Inicio</th>
+          <th scope="col">Fecha Termino</th>
+        </tr>
+      </thead>
+      <tbody class="cuerpoTabla">
+      </tbody>
+    </table>
   </div>
+</div>
+<script src="js/cargarmembresias.js"></script>
