--- a/html/clientes.html
+++ b/html/clientes.html
@@ -15,7 +15,7 @@
     <h1 class="text-white">Clientes</h1>
   </div> -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0">
+  <nav class="navbar navbar-expand navbar-dark bg-dark px-0">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
