--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <!-- <link rel="stylesheet" href="css/indexstyle.css"> -->
     <link rel="stylesheet" href="css/sidebarstyle.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="shortcut icon" href="iconos/titulo.ico" />
-
-
+    <link rel="stylesheet" href="css/content.css">
+    <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="favicon.ico" rel="icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     <script src="js/jquery.js"></script>
     <script src="js/cargamodulos.js"></script>
     <title>Principal</title>
