--- a/html/clientes.html
+++ b/html/clientes.html
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item px-0">
-          <a class="nav-link pl-0" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
+          <a class="nav-link pl-0" id="btn-agregar" href="#"><i class="far fa-address-card h1 text-white"></i> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
+          <a class="nav-link" id="btn-eliminar" href="#"><i class="far fa-trash-alt h1 text-white"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#"><i class="far fa-edit h1 text-white"></i></a>
+          <a class="nav-link " id="btn-modificar" href="#"><i class="far fa-edit h1 text-white"></i></a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -43,7 +43,7 @@
   <table class="table table-hover table-dark mt-3">
     <thead>
       <tr>
-        <th scope="col">NIP Cliente/th>
+        <th scope="col">NIP Cliente</th>
         <th scope="col">Nombre</th>
         <th scope="col">Apellido Paterno</th>
         <th scope="col">Edad</th>
@@ -56,3 +56,4 @@
   </table>
 </div>
 <script src="js/cargarCliente.js"></script>
+<script src="js/eliminarClientes.js"></script>
