--- a/html/clientes.html
+++ b/html/clientes.html
@@ -39,7 +39,7 @@
       </form>
     </div>
   </nav>
-
+<div class="table-responsibe">
   <table class="table table-hover table-dark mt-3">
     <thead>
       <tr>
@@ -54,6 +54,7 @@
       
     </tbody>
   </table>
+</div>
 </div>
 <script src="js/cargarCliente.js"></script>
 <script src="js/eliminarClientes.js"></script>
