Agregar Clientes Mejorado

--- a/html/clientes.html
+++ b/html/clientes.html
@@ -84,9 +84,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="submit" class="btn btn-primary" id="btnGuardar" >Guardar
-                    <script src="js/cargarCliente.js"></script>
-                  </button>
+                  <button type="submit" class="btn btn-primary" id="btnGuardar" >Guardar</button>
                 </div>
               </form>
             </div>
