--- a/html/clientes.html
+++ b/html/clientes.html
@@ -46,13 +46,13 @@
             </div>
             <div class="modal-body">
               <form id="nuevoClienteForm" method="POST">
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <label for="nipCliente">NIP Cliente</label>
                   <input type="text" class="form-control" id="nipCliente" name="nipCliente" required>
-                </div>
+                </div> -->
                 <div class="form-group">
                   <label for="nombre">Nombre</label>
-                  <input type="text" class="form-control" id="nombre" name="nombre">
+                  <input type="text" class="form-control" id="nombreCliente" name="nombreCliente">
                 </div>
                 <div class="form-group">
                   <label for="apellidoPaterno">Apellido Paterno</label>
@@ -119,5 +119,5 @@
 <script src="js/agregarCliente.js"></script>
 <script src="js/eliminarClientes.js"></script>
 
-<script src="js/buscarCliente.js"></script>
+<script src="js/buscarClientes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
