--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-     crossorigin="anonymous">
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
-     crossorigin="anonymous">
- <link rel="stylesheet" href="css/indexstyle.css">
- <script src="js/jquery.js"></script>
-    <title>Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="css/indexstyle.css">
+  <link rel="stylesheet" href="css/sidebarstyle.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+  <link type="image/x-icon" href="favicon.ico" rel="icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+  <script src="js/cargamodulos.js"></script>
+  <script src="js/jquery.js"></script>
+  <title>Login</title>
 </head>
+
 <body class="bg-dark">
 
-    <div  id="loginDiv" tabindex="-1" role="dialog" aria-labelledby="agregarModal" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content bg-dark text-light">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Inicia sesión</h5>
+  <div id="loginDiv" tabindex="-1" role="dialog" aria-labelledby="agregarModal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content bg-dark text-light">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Inicia sesión</h5>
+        </div>
+        <div class="modal-body">
+          <form id="log" method="POST">
+            <div class="form-group">
+              <label for="nipCliente">Usuario</label>
+              <input type="text" class="form-control" id="user" name="user" required>
             </div>
-            <div class="modal-body">
-              <form id="log" method="POST">
-                <div class="form-group">
-                  <label for="nipCliente">Usuario</label>
-                  <input type="text" class="form-control" id="user" name="user" required>
-                </div>
-                <div class="form-group">
-                  <label for="nombre">Contraseña</label>
-                  <input type="password" class="form-control" id="nombre" name="pass">
-                </div>
-                <div class="modal-footer">
-                  <button type="submit" class="btn btn-success" id="btnGuardar" >Entrar
-                  </button>
+            <div class="form-group">
+              <label for="nombre">Contraseña</label>
+              <input type="password" class="form-control" id="nombre" name="pass">
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-success" id="btnGuardar">Entrar
+              </button>
 
-                </div>
-              </form>
             </div>
-          </div>
+          </form>
         </div>
       </div>
-      <script src="js/login.js"></script>
+    </div>
+  </div>
+  <script src="js/login.js"></script>
 </body>
+
 </html>
