--- a/principal.html
+++ b/principal.html
@@ -1,27 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
-        crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="css/indexstyle.css"> -->
-    <link rel="stylesheet" href="css/sidebarstyle.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <!-- <link rel="stylesheet" href="css/content.css"> -->
-    <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
-    <link type="image/x-icon" href="favicon.ico" rel="icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/cargamodulos.js"></script>
-    <title>Principal</title>
-</head>
 
 <body class="bg-dark">
     <!-- <a class="text-white" href="#">Acropolis Gym</a> -->
@@ -65,13 +44,18 @@
                             <div>
                                 <hr class="bg-light d-lg-block">
                             </div>
-                            <li class="nav-item active d-flex align-items-center">
-                                <i class="fas fa-wrench text-white"></i>
-                                <a class="nav-link px-2" href="#">Herramientas<span class="sr-only">(current)</span></a>
+                            <li class="nav-item herramientasLink">
+                                <a class="nav-link dropdown-toggle mb-0" id="herramientasLink" href="#">
+                                    Herramientas
+                                </a>
+                                <div class="mt-0 ml-3 submenu-herramientas d-none" aria-labelledby="navbarDropright">
+                                    <a class="px-4 nav-link" href="#" id="nuevo-usuario">Agregar usuarios</a>
+                                    <a class="px-4 nav-link" href="#">Restaurar</a>
+                                </div>
                             </li>
                         </ul>
 
-                       
+
                     </div>
 
                 </div>
