--- a/html/nuevo-usuario.html
+++ b/html/nuevo-usuario.html
@@ -19,10 +19,13 @@
     <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="todos-privilegios" name="todos-privilegios" value="todos">
         <label class="form-check-label" for="todos-privilegios">Todos los privilegios</label>
-
-        <input type="checkbox" class="form-check-input" id="select" name="privilegios[]" value="SELECT">
+    </div>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="select-check" name="select-check" value="SELECT">
         <label class="form-check-label" for="todos-privilegios">Select</label>
-        <input type="checkbox" class="form-check-input" id="insert" name="privilegios[]" value="INSERT">
+    </div>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="insert-check" name="insert-check" value="INSERT">
         <label class="form-check-label" for="todos-privilegios">Insert</label>
     </div>
 
