Creacion de respaldos

--- a/principal.html
+++ b/principal.html
@@ -50,7 +50,7 @@
                                 </a>
                                 <div class="mt-0 ml-3 submenu-herramientas d-none" aria-labelledby="navbarDropright">
                                     <a class="px-4 nav-link" href="#" id="nuevo-usuario">Agregar usuarios</a>
-                                    <a class="px-4 nav-link" href="#">Restaurar</a>
+                                    <a class="px-4 nav-link" href="#" id="respaldos">Respaldos</a>
                                 </div>
                             </li>
                         </ul>
