--- a/html/respaldos.html
+++ b/html/respaldos.html
@@ -1,4 +1,14 @@
 <h1 class="lead text-white mt-0 p-0">Respaldo y Restauración</h1>
 <button class="btn btn-success" type="button" id="generar-respaldo">Generar respaldo</button>
-<button class="btn btn-success" type="button" >Importar respaldo</button>
+<button class="btn btn-success" type="button" id="restaurar">Restaurar</button> 
+
+<form id="archivoForm">
+    <div class="form-group">
+        <label for="exampleFormControlFile1" class="text-white">Example file input</label>
+        <input type="file" class="form-control-file text-white" id="archivo-restauracion" name="archivo">
+        
+    </div>
+</form>
+
 <script src="js/respaldos.js"></script>
+<script src="js/restauracion.js"></script>
