--- a/html/membresias.html
+++ b/html/membresias.html
@@ -1,4 +1,3 @@
-
 <div class="container bg-dark">
 
   <nav class="navbar navbar-expand navbar-dark bg-dark px-0 sticky-top">
@@ -27,10 +26,16 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type ="text" id="buscarMembresia">
+        <input class="form-control mr-sm-2" type="text" id="buscarMembresia">
       </form>
     </div>
   </nav>
+
+  <div class="custom-control custom-checkbox mr-sm-2">
+    <input type="checkbox" class="custom-control-input check-vencidas" id="customControlAutosizing">
+    <label class="custom-control-label text-white text-light" for="customControlAutosizing">Membresias que vencen hoy</label>
+  </div>
+
   <!-- modal -->
 
   <div class="modal fade" id="agregarmembresia" tabindex="-1" role="dialog" aria-labelledby="agregarModal" aria-hidden="true">
@@ -58,7 +63,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="submit" class="btn btn-primary" id="btnGuardar" >Guardar</button>
+              <button type="submit" class="btn btn-primary" id="btnGuardar">Guardar</button>
             </div>
           </form>
         </div>
