Agregar y cargar productos estan listos; Modificaciones en productos.html, agregarCliente.js, cargamodulos.js, agregarCliente.php, principal.html; TODO BELLO

--- a/principal.html
+++ b/principal.html
@@ -32,13 +32,13 @@
                                 <i class="fas fa-id-card text-white"></i>
                                 <a class="nav-link px-2" id='membresiasLink' href="#">Membresias</a>
                             </li>
-                            <li class="nav-item d-flex align-items-center">
+                            <li class="nav-item d-flex align-items-center productosLink">
                                 <i class="fas text-white fa-list-ul"></i>
-                                <a class="nav-link px-2" href="#">Productos</a>
+                                <a class="nav-link px-2" id="productosLink" href="#">Productos</a>
                             </li>
-                            <li class="nav-item d-flex align-items-center">
+                            <li class="nav-item d-flex align-items-center notasLink">
                                 <i class="far text-white fa-sticky-note"></i>
-                                <a class="nav-link px-2" href="#">Notas</a>
+                                <a class="nav-link px-2" id="notasLink" href="#">Notas</a>
 
                             </li>
                             <div>
