--- a/html/productos.html
+++ b/html/productos.html
@@ -29,42 +29,22 @@
                 </button>
               </div>
               <div class="modal-body">
-                <form id="nuevoClienteForm" method="POST">
+                <form id="nuevoProductoForm" method="POST">
                   <!-- <div class="form-group">
                     <label for="nipCliente">NIP Cliente</label>
                     <input type="text" class="form-control" id="nipCliente" name="nipCliente" required>
                   </div> -->
                   <div class="form-group">
-                    <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" id="nombreCliente" name="nombreCliente">
+                    <label for="nombre">Descripcion</label>
+                    <input type="text" class="form-control" id="descripcionProducto" name="descripcionProducto">
                   </div>
                   <div class="form-group">
-                    <label for="apellidoPaterno">Apellido Paterno</label>
-                    <input type="text" class="form-control" id="apellidoPaterno" name="apellidoPaterno">
+                    <label for="apellidoPaterno">Precio</label>
+                    <input type="text" class="form-control" id="precio" name="precio">
                   </div>
                   <div class="form-group">
-                    <label for="apellidoMaterno">Apellido Materno</label>
-                    <input type="text" class="form-control" id="apellidoMaterno" name="apellidoMaterno">
-                  </div>
-                  <div class="form-group">
-                    <label for="edad">Edad</label>
-                    <input type="text" class="form-control" id="edad" name="edad">
-                  </div>
-                  <div class="form-group">
-                    <label for="genero">Genero</label>
-                    <input type="text" class="form-control" id="genero" name="genero">
-                  </div>
-                  <div class="form-group">
-                    <label for="peso">Peso</label>
-                    <input type="text" class="form-control" id="peso" name="peso">
-                  </div>
-                  <div class="form-group">
-                    <label for="problemas">Problemas</label>
-                    <input type="text" class="form-control" id="problemas" name="problemas">
-                  </div>
-                  <div class="form-group">
-                    <label for="notas">Notas</label>
-                    <input type="text" class="form-control" id="notas" name="notas">
+                    <label for="apellidoMaterno">Existencia</label>
+                    <input type="text" class="form-control" id="existencia" name="existencia">
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -77,7 +57,7 @@
         </div>
   
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" id="buscarCliente" type="text">
+          <input class="form-control mr-sm-2" id="buscarProducto" type="text">
           <!-- <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button> -->
         </form>
       </div>
@@ -86,16 +66,18 @@
       <table class="table table-hover table-dark mt-3">
         <thead>
           <tr>
-            <th scope="col">NIP Cliente</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Apellido Paterno</th>
-            <th scope="col">Edad</th>
-            <th scope="col">Genero</th>
+            <th scope="col">ID Producto</th>
+            <th scope="col">Descripcion</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Existencia</th>
           </tr>
         </thead>
-        <tbody class="cuerpo">
+        <tbody class="cuerpoTabla">
   
         </tbody>
       </table>
     </div>
   </div>
+
+  <script src="js/cargarProductos.js"></script>
+  <script src="js/agregarProductos.js"></script>
