--- a/principal.html
+++ b/principal.html
@@ -36,9 +36,9 @@
                                 <i class="fas text-white fa-list-ul"></i>
                                 <a class="nav-link px-2" href="#">Productos</a>
                             </li>
-                            <li class="nav-item d-flex align-items-center">
+                            <li class="nav-item d-flex align-items-center notasLink">
                                 <i class="far text-white fa-sticky-note"></i>
-                                <a class="nav-link px-2" href="#">Notas</a>
+                                <a class="nav-link px-2" href="#" id="notasLink">Notas</a>
 
                             </li>
                             <div>
