--- a/principal.html
+++ b/principal.html
@@ -39,7 +39,7 @@
                             <li class="nav-item d-flex align-items-center notasLink">
                                 <i class="far text-white fa-sticky-note"></i>
 
-                                <a class="nav-link px-2" id="notasLink" href="#">Notas</a>
+                                <a class="nav-link px-2" href="#" id="notasLink">Notas</a>
 
 
                             </li>
