Productos mejorado, falta modificacion

--- a/html/productos.html
+++ b/html/productos.html
@@ -81,3 +81,5 @@
 
   <script src="js/cargarProductos.js"></script>
   <script src="js/agregarProductos.js"></script>
+  <script src="js/buscarProducto.js"></script>
+  <script src="js/eliminarProductos.js"></script>
