Editar clientes y editar productos ya esta al vergazo

--- a/html/clientes.html
+++ b/html/clientes.html
@@ -127,6 +127,6 @@
 <script src="js/cargarCliente.js"></script>
 <script src="js/agregarCliente.js"></script>
 <script src="js/eliminarClientes.js"></script>
-
+<script src="js/editarClientes.js"></script>
 <script src="js/buscarClientes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
