--- a/html/productos.html
+++ b/html/productos.html
@@ -17,6 +17,12 @@
           <li class="nav-item">
             <a class="nav-link " id="btn-modificar" href="#"><i class="far fa-edit h1 text-white"></i></a>
           </li>
+          <li class="nav-item d-none" id="guardar">
+            <a class="nav-link " href="#" id="guardarEdicion"><i class="far fa-save h1 text-white"></i></a>
+          </li>
+          <li class="nav-item d-none" id="cancelar">
+            <a class="nav-link " href="#" id="cancelarEdicion"><i class="far fa-window-close h1 text-white"></i></i></a>
+          </li>
         </ul>
   
         <div class="modal fade" id="agregarCliente" tabindex="-1" role="dialog" aria-labelledby="agregarModal" aria-hidden="true">
@@ -83,3 +89,4 @@
   <script src="js/agregarProductos.js"></script>
   <script src="js/buscarProducto.js"></script>
   <script src="js/eliminarProductos.js"></script>
+  <script src="js/editarProductos.js"></script>
